add response for the API index.js file

--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,17 @@
     <div>
       <div class="recent-scores">
         <h2>Recent scores</h2>
-        <button type="button">Refresh</button>
+        <button id="get-scores" type="button">Refresh</button>
       </div>
-      <ul id="scores-container">
-        <li>name: 100</li>
-        <li>name: 20</li>
-        <li>name: 50</li>
-      </ul>
+      <ul id="scores-container"> </ul>
     </div>
 
     <div>
       <h2>Add your score</h2>
-      <form action="#">
-        <input type="text" placeholder="Your name">
-        <input type="text" placeholder="Your score">
-        <button type="submit">Submit</button>
+      <form id="add-score" action="#">
+        <input id="input-name" type="text" placeholder="Your name">
+        <input id="input-score" type="text" placeholder="Your score">
+        <button id="submit-button" type="submit">Submit</button>
       </form>
     </div>
   </div>
