add th efunction showmessage for handle the errors with no console

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
         <input id="input-score" type="text" placeholder="Your score">
         <button id="submit-button" type="submit">Submit</button>
       </form>
+      <div id="message"></div>
     </div>
   </div>
 </body>
