--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
     <div>
       <h2>Add your score</h2>
       <form id="add-score" action="#">
-        <input id="input-name" type="text" placeholder="Your name">
-        <input id="input-score" type="text" placeholder="Your score">
+        <input id="input-name" type="text" placeholder="Your name" required>
+        <input id="input-score" type="text" placeholder="Your score" required>
         <button id="submit-button" type="submit">Submit</button>
       </form>
       <div id="message"></div>
