--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <ul id="scores-container"> </ul>
     </div>
 
-    <div>
+    <div class="form-container">
       <h2>Add your score</h2>
       <form id="add-score" action="#">
         <input id="input-name" type="text" placeholder="Your name" required>
