add background black, ad more space below title

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Leaderboard</h1>
+  <h1>Leaderboard</h1> <br><br><br>
   <div class="view-container">
     <div>
       <div class="recent-scores">
