add new article and styles for mario

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,10 @@
       </form>
       <div id="message"></div>
     </div>
+    <article>
+      <img src='https://i.imgur.com/YPQlth8.jpg' />
+      <img src='https://i.imgur.com/2u3EXCX.png' />
+    </article>
   </div>
 </body>
 
